[package]
name = "reth-sentry-node"
version = "0.1.0"
edition = "2021"
description = "Lightweight Ethereum sentry node for mempool tx collection and forwarding"

[dependencies]
# Reth P2P and networking (git deps - not published individually)
reth-network = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }

# Alloy (versions matched to reth v1.11.3)
alloy-primitives = "1.5"
alloy-rlp = "0.3.13"
alloy-consensus = "1.6"
alloy-eips = "1.6"

# Reth network P2P types
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }

# Crypto
secp256k1 = { version = "0.30", features = ["global-context"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client for forwarding
reqwest = { version = "0.12", features = ["json"] }

# WebSocket server for pending tx streaming
tokio-tungstenite = "0.26"
futures-util = "0.3"

# LRU cache for dedup
lru = "0.12"

# Misc
eyre = "0.6"
