[package]
name = "reth-sentry-node"
version = "0.2.0"
edition = "2021"
description = "Lightweight Ethereum sentry node for mempool tx collection and forwarding"

[dependencies]
# Reth P2P and networking (git deps - not published individually)
reth-network = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v2.0.0" }

# Alloy (versions matched to reth v2.0.0)
alloy-primitives = "1.5"
alloy-rlp = "0.3.13"
alloy-consensus = "1.8"
alloy-eips = "1.8"

# Crypto
secp256k1 = { version = "0.30", features = ["global-context"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client for forwarding
reqwest = { version = "0.12", features = ["json"] }

# WebSocket server for pending tx streaming
tokio-tungstenite = "0.26"
futures-util = "0.3"

# LRU cache for dedup
lru = "0.12"

# Misc
eyre = "0.6"
